--- a/css/other/txt.css
+++ b/css/other/txt.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     background-color: antiquewhite;
-    size: 18px;
+    font-size: 18px;
     text-align: left;
 }
 
@@ -11,4 +11,16 @@ body {
     src: url("/fonts/JosephinSans/JosefinSans-VariableFont_wght.ttf");
     font-weight: normal;
     font-style: normal;
+}
+
+
+myTxt {
+    font-size: 20px;
+
+}
+
+myTxtMaj {
+    color: chocolate;
+    font-size: 36px;
+    font-weight: bold;
 }
