--- a/css/introRow/intro.css
+++ b/css/introRow/intro.css
@@ -40,3 +40,22 @@
     width: 125px;
 
 }
+
+
+
+.buttonIntro {
+    color: wheat;
+    border: none;
+    background-color: chocolate;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+}
+
+.buttonIntro:hover {
+    scale: 1.05;
+    transition: 0.5s;
+}
