--- a/css/other/txt.css
+++ b/css/other/txt.css
@@ -24,3 +24,11 @@ myTxtMaj {
     font-size: 36px;
     font-weight: bold;
 }
+
+myTxtWork {
+    color: chocolate;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
