--- a/css/headerRow/logoHeader.css
+++ b/css/headerRow/logoHeader.css
@@ -4,7 +4,9 @@
 }
 
 .imgLogo {
-    width:30px;
-    height:30px;
+    width:25px;
+    height:25px;
+    object-fit: cover;
+
     border-radius: 50%;
 }
