--- a/css/introRow/intro.css
+++ b/css/introRow/intro.css
@@ -18,7 +18,7 @@
 #myImg {
     border: solid;
     border-radius: 50%;
-    border-color: chocolate;
+    border-color: rgb(6, 101, 6);
     display: flex;
     position: static;
     align-items: center;
