--- a/css/introRow/intro.css
+++ b/css/introRow/intro.css
@@ -19,13 +19,26 @@
     border: solid;
     border-radius: 50%;
     border-color: rgb(6, 101, 6);
-    display: flex;
     position: static;
     align-items: center;
     justify-content: center;
     height: 125px;
     width: 125px;
 }
+
+
+#myImg2 {
+    border: solid;
+    border-radius: 50%;
+    border-color: rgb(6, 101, 6);
+    display: flex;
+    position: static;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    width: 100px;
+}
+
 
 .introRow {
     margin-top: 30px;
