--- a/css/headerRow/navHeader.css
+++ b/css/headerRow/navHeader.css
@@ -59,6 +59,20 @@ ul {
     color: black;
 }
 
+.navContainer {
+    display: block;
+}
+
+@media only screen and (max-width: 600px) {
+
+    body {
+        background-color: red;
+    }
+  
+.navContainer{
+display:none;
+}
 
 
 
+}
