--- a/css/other/txt.css
+++ b/css/other/txt.css
@@ -32,6 +32,16 @@ myTxtWork {
     text-decoration: underline;
 }
 
+
+myTxtWork2 {
+    color: chocolate;
+    font-size: 24px;
+    font-weight: bold;
+
+}
+
+
+
 smallTitle {
     color:black;
     font-size: 18px;
