--- a/css/cardRow/card.css
+++ b/css/cardRow/card.css
@@ -1,20 +1,65 @@
 .card {
-
+    cursor: pointer;
+    border-radius: 25px;
 }
 
 .cardImg {
-    filter: blur(2px);
+    position: relative;
+    width: 100%;
+    max-width: 100%; /* Ensure the image doesn't exceed its original size */
+    height: 200px; /* Set the desired height */
+    object-fit: cover; /* Maintain the aspect ratio and cover the container */
+    border-radius: 25px;
 }
 
 .cardContent {
-background-color: antiquewhite;
-border-style: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 25px;    
+    padding: 1.25px; /* Adjust as needed */
+    color:whitesmoke; /* Set the text color */
+    display: flex; /* Align children in a row */
+    flex-direction: column; /* Stack children vertically */
+    align-items: center; /* Center items horizontally */
+    justify-content: center; /* Center items vertically */
+    backdrop-filter: blur(3px);
+    
 }
 
 cardTxtTitle {
+    font-size: 26px;
+    position: relative;
+    display: block;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    margin-top: auto; 
+      text-shadow: 0 0 2px #070202;
+
 
 }
 
-.buttonCard {
+cardTxt {
+    font-size: 18px;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1.0s ease-in-out;
+    text-shadow: 0 0 2px #070202;
+}
 
+.buttonCard {
+    display: none;
+}
+
+.card:hover {
+    cardTxt {
+        opacity: 1;
+        
+    }
+    
+    cardTxtTitle {
+        opacity: 0;
+    }
 }
