--- a/css/headerRow/navHeader.css
+++ b/css/headerRow/navHeader.css
@@ -63,14 +63,17 @@ ul {
     display: block;
 }
 
-@media only screen and (max-width: 600px) {
+.buttonHiden {
+    display: none;
+}
 
-    body {
-        background-color: red;
-    }
-  
+@media only screen and (max-width: 768px) {
+
 .navContainer{
 display:none;
+}
+.buttonHiden{
+    display: block;
 }
 
 
