--- a/css/introRow/intro.css
+++ b/css/introRow/intro.css
@@ -72,3 +72,16 @@
     scale: 1.05;
     transition: 0.5s;
 }
+
+
+@media only screen and (max-width: 768px) {
+
+    #myImg {
+        size: 80%;
+        height: 100px;
+        width: 100px;
+    }
+    
+    
+    
+    }
