--- a/css/other/txt.css
+++ b/css/other/txt.css
@@ -21,7 +21,7 @@ myTxt {
 
 myTxtMaj {
     color: chocolate;
-    font-size: 36px;
+    font-size: 34px;
     font-weight: bold;
 }
 
@@ -37,6 +37,7 @@ myTxtWork2 {
     color: chocolate;
     font-size: 24px;
     font-weight: bold;
+    
 
 }
 
@@ -46,4 +47,51 @@ smallTitle {
     color:black;
     font-size: 18px;
     font-weight: bold;
+}
+
+logoTitle {
+    color:chocolate;
+    font-size: 18px;
+    font-weight: bold;
+    display: none;
+}
+
+
+
+logoTitleHide {
+    color:chocolate;
+    font-size: 18px;
+    font-weight: bold;
+    display: contents;
+}
+
+introTxtCadre {
+    font-size: 18px;
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+
+    body{
+        font-size: 16px;
+    }
+
+    introTxtCadre {
+        font-size: 18px;
+    }
+
+    logoTitle {
+        display: contents;
+
+    }
+
+    logoTitleHide {
+        display: none;
+    }
+
+    myTxtMaj {
+        font-size: 30px ;
+    }
 }
