--- a/css/cardRow/card.css
+++ b/css/cardRow/card.css
@@ -36,7 +36,7 @@ cardTxtTitle {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
     margin-top: auto; 
-      text-shadow: 0 0 8px #070202;
+    text-shadow: 0 0 8px #000000
 
 
 }
