--- a/css/headerRow/navHeader.css
+++ b/css/headerRow/navHeader.css
@@ -25,6 +25,12 @@
     
 }
 
+.listHeader2 {
+    display: inline;
+    text-decoration: none;
+    
+}
+
 a {
     font-family: 'Josefin Sans', sans-serif;
     text-decoration: none;
