some add fontawesome

--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,1 +1,33 @@
-<p>header works!</p>
+<div class="container-fluid containerMain ">
+    <!-- CONTAINER START HERE -->
+
+    
+    <!-- Header row START -->
+    <div class="row myHeader">
+
+
+        <div class="col-4 align-items-center pt-2">
+            <li class="logo"><b href="">
+                    <img src="/assets/img/Wanderer.jpg" alt="Logo" class="imgLogo">
+                    Figueira Thibaut
+                </b> </li>
+        </div>
+
+        <div class="col-4 align-items-center text-center pt-2 navContainer">
+          <ul>
+                <li class="listHeader"><a href="">Work</a></li>
+                <li class="listHeader"><a href="">Blog</a></li>
+                <li class="listHeader"><a href="">About</a></li>
+                <li class="listHeader"><a href="">
+                    <i class="fa-brands fa-square-github"></i>
+
+                    GitHub
+                </a></li>
+            </ul>
+        </div>
+
+        <div class="col-4"></div>
+
+
+
+    </div> <!-- Header row END -->
