--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: antiquewhite;
+    font-size: 18px;
+    text-align: left;
+}
+
+
+@font-face {
+    font-family: 'Josefin Sans';
+    src: url("assets/fonts/JosephinSans/JosefinSans-VariableFont_wght.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
