--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,33 +1,36 @@
-<div class="container-fluid containerMain ">
-    <!-- CONTAINER START HERE -->
+<div class="container-fluid containerMain stickyHeader">
+    <!-- START CONTAINER -->
 
     
     <!-- Header row START -->
-    <div class="row myHeader">
+    <div class="row">
 
 
-        <div class="col-4 align-items-center pt-2">
+        <div class="col-4 pt-2">
             <li class="logo"><b href="">
                     <img src="/assets/img/Wanderer.jpg" alt="Logo" class="imgLogo">
                     Figueira Thibaut
                 </b> </li>
         </div>
 
-        <div class="col-4 align-items-center text-center pt-2 navContainer">
+        <div class="col-4 align-items-center text-center pt-2  ">
           <ul>
                 <li class="listHeader"><a href="">Work</a></li>
                 <li class="listHeader"><a href="">Blog</a></li>
                 <li class="listHeader"><a href="">About</a></li>
                 <li class="listHeader"><a href="">
                     <i class="fa-brands fa-square-github"></i>
-
                     GitHub
                 </a></li>
             </ul>
         </div>
 
-        <div class="col-4"></div>
+        <div class="col-4 ">
+            <button class="buttonHeader"><i class="fa-solid fa-moon" style="color: antiquewhite;"></i></button>
+        </div>
 
 
 
     </div> <!-- Header row END -->
+
+</div> <!-- END container -->
