--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
 
 
         <div class="col-4 pt-2">
-            <li class="logo"><b href="">
+            <li class="logo"><b routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
                     <img src="/assets/img/Wanderer.jpg" alt="Logo" class="imgLogo">
                     Figueira Thibaut
                 </b> </li>
@@ -15,9 +15,9 @@
 
         <div class="col-4 align-items-center text-center pt-2  ">
           <ul>
-                <li class="listHeader"><a href="">Work</a></li>
-                <li class="listHeader"><a href="">Blog</a></li>
-                <li class="listHeader"><a href="">About</a></li>
+            <li class="listHeader"><a routerLink="/works" routerLinkActive="active" ariaCurrentWhenActive="page">Works</a></li>
+            <li class="listHeader"><a routerLink="/posts" routerLinkActive="active" ariaCurrentWhenActive="page">Posts</a></li>
+            <li class="listHeader"><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
                 <li class="listHeader"><a href="">
                     <i class="fa-brands fa-square-github"></i>
                     GitHub
@@ -34,3 +34,5 @@
     </div> <!-- Header row END -->
 
 </div> <!-- END container -->
+
+<router-outlet></router-outlet>
