--- a/portfolio/src/app/components/notfound/notfound.component.html
+++ b/portfolio/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,22 @@
-<p>notfound works!</p>
+<div class="container-fluid">
+
+<div class="row">
+
+
+    <div class="col-4"></div>
+
+
+
+    <div class="col-4">
+        <app-scene></app-scene>
+    </div>
+
+
+
+    <div class="col-4"></div>
+
+
+
+</div>
+
+</div>
