--- a/portfolio/src/app/components/notfound/notfound.component.html
+++ b/portfolio/src/app/components/notfound/notfound.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-<div class="row">
+<div class="row"> <!-- ROW1 START -->
 
 
     <div class="col-4"></div>
@@ -16,7 +16,28 @@
     <div class="col-4"></div>
 
 
+</div> <!-- ROW2 END -->
 
-</div>
+
+<div class="row"> <!-- ROW1 START -->
+
+
+    <div class="col-4"></div>
+
+
+
+    <div class="col-4">
+        <div class="bigLetter">
+            404 - not found
+        </div>
+        The page you looking for doesn't exist.
+    </div>
+
+
+
+    <div class="col-4"></div>
+
+
+</div> <!-- ROW2 END -->
 
 </div>
