--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid containerMain stickyHeader">
+<div class="container-fluid stickyHeader">
     <!-- START CONTAINER -->
 
     
@@ -9,7 +9,7 @@
         <div class="col-4 pt-2">
             <li class="logo"><b routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
                     <img src="/assets/img/Wanderer.jpg" alt="Logo" class="imgLogo">
-                    Figueira Thibaut
+                    Figueira T.
                 </b> </li>
         </div>
 
