--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -1,1 +1,241 @@
-<p>home works!</p>
+<div class="container-fluid">
+
+    <div class="row"> <!-- ROW1 START -->
+    
+    
+        <div class="col-4"></div>
+    
+    
+    
+        <div class="col-4">
+            <app-scene></app-scene>
+        </div>
+    
+    
+    
+        <div class="col-4"></div>
+    
+    
+    </div> <!-- ROW1 END -->
+
+    
+
+        <!-- Intro row START -->
+        <div class="row text-center">
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-3 ">
+                <div class="msgIntro">
+                    <div class="introTxtCadre">
+                        Hello World, i am a computer scientists from France !
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Intro row END -->
+
+
+
+
+        <!-- IMG Intro row START -->
+        <div class="row introRow">
+
+            <div class="col-4 align-items-end">
+            </div>
+
+
+            <div class="col-12 col-md-4 ">
+                <div class="containerIntro text-center">
+
+                    <div class="row">
+
+                        <div class="col-12 col-md-4 ">
+                            <div class="col"><img src="/assets/img/me.jpg" alt="5 Terre" id="myImg"></div>
+                        </div>
+
+                        <div class="col-12 col-md-8">
+                            <div class="col">
+                                <h1>Figueira Thibaut</h1>
+                            </div>
+                            <div class="col">
+                                <h1>Student, mountain lover, artist, runner.</h1>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="col-4  ">
+            </div>
+
+        </div> <!--IMG Intro row END -->
+
+
+        <!-- Mywork row START -->
+        <div class="row">
+
+            <div class="col-4 ">
+            </div>
+
+            <div class="col-12 col-md-4 ">
+                <div class=" pb-2">
+                    <h1>Work</h1>
+                </div>
+                
+                <p>&emsp; Hello and welcome, my name is Thibaut and i am a French student from Paris. I have a passion
+                    for building digital products and discovering new tech. I aim to become a full stack developer to
+                    make my own projects from the front end to the back end. When I am not coding, I love hiking in the
+                    mountains of France or exploring all sorts of art. Currently, I am building my
+                    <a href="https://github.com/justachips/PortfolioFgi" class="hyperlink">website</a>, have a
+                    look !
+                </p>
+                <p></p>
+                <button class="buttonIntro" onclick="window.location.href='old/html/work.html'">My Portfolio ></button>
+            </div>
+
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Mywork row END -->
+
+
+        <!-- Mybio row START -->
+        <div class="row align-items-center">
+
+            <div class="col-4 ">
+            </div>
+
+            <div class="col-12 col-md-4  ">
+                
+                <div class="pt-2 pb-2">
+                    <h1> Bio </h1>
+                </div>
+                
+                <div class="row">
+                    <div class="col-2 col-md-1">
+                        <h1>1997</h1>
+                    </div>
+                    <div class="col-10 col-md-11">
+                    Born in Paris, France.
+                    </div>
+                </div>
+
+                <div class="row pt-2">
+                    <div class="col-2 col-md-1 ">
+                        <h1>2016</h1>
+                    </div>
+                    <div class="col-10 col-md-11">
+                        Bac S Spécialité SVT, Lycée Flora Tristan, Noisy le Grand.
+                    </div>
+                </div>
+
+                <div class="row pt-2">
+                    <div class="col-2 col-md-1 ">
+                        <h1>2020</h1>
+                    </div>
+                    <div class="col-10 col-md-11">
+                        Licence Cinéma & Audiovisuelle, Université Sorbonne Nouvelle, Paris. 
+                    </div>
+                </div>
+
+                <div class="row pt-2">
+                    <div class="col-2 col-md-3 ">
+                        <h1>2022 to present</h1>
+                    </div>
+                    <div class="col-10 col-md-9">
+                        Computer scientists studies, Ynov, Paris.
+                    </div>
+                </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Mybio row END -->
+
+
+        <!-- Mylove row START -->
+        <div class="row ">
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-3">
+
+                <div class="pt-2 pb-2">
+                    <h1> I love </h1>
+                </div>
+                
+                <p>&emsp; Hiking, Nature, Art, <a href="/old/html/photo.html" class="hyperlink">Photography</a>, Running, Climbing, Chill Music, Movie, SF & Fantasy Books.  </p>
+
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Web row END -->
+
+        <!-- Mylink row START -->
+        <div class="row ">
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-3">
+
+                <div class="pt-2 pb-2">
+                    <h1> Web </h1>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-6 pt-2">
+                        &emsp;
+                        <li class="listHeader"><a href="https://github.com/justachips">
+                            <i class="fa-brands fa-square-github buttonGit" style="color: chocolate;"></i>
+                            GitHub
+                        </a></li> 
+                    </div>
+
+                    <div class="col-6 pt-2 text-end">
+                        <li class="listHeader"><a href="https://ytrack.learn.ynov.com/git/fthibaut">
+                            <i class="fa-brands fa-square-git" style="color: chocolate;"></i>
+                            GitTea
+                        </a></li>
+                    </div>
+
+                    <div class="col-6 pt-2 ">
+                        &emsp; 
+                        <li class="listHeader"><a href="https://www.linkedin.com/in/thibaut-figueira-9a2112133/">
+                            <i class="fa-brands fa-linkedin" style="color: chocolate;"></i>
+                            Linkedin
+                        </a></li>
+                    </div>
+
+                    <div class="col-6 pt-2 text-end">
+                        <li class="listHeader"><a href="/old/html/about.html">
+                            <i class="fa-solid fa-envelope" style="color: chocolate;"></i>
+                            &nbsp;Email
+                        </a></li>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- WEB row END -->
+
+</div> 
