portfolio work n home

--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid stickyHeader">
     <!-- START CONTAINER -->
 
+
+
     
     <!-- Header row START -->
     <div class="row">
@@ -33,6 +35,35 @@
 
     </div> <!-- Header row END -->
 
+    
+
 </div> <!-- END container -->
+
+<div class="container-fluid">
+
+    <div class="row"> <!-- ROW1 START -->
+    
+    
+        <div class="col-4"></div>
+    
+    
+    
+        <div class="col-4">
+            <app-scene></app-scene>
+        </div>
+    
+    
+    
+        <div class="col-4"></div>
+    
+    
+    </div> <!-- ROW1 END -->
+
+    
+</div>
+
+
+
+
 
 <router-outlet></router-outlet>
