--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -1,1 +1,114 @@
-<p>about works!</p>
+
+    <div class="container-fluid containerMain ">
+
+
+
+        <!-- Intro row START -->
+        <div class="row text-center">
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-3">
+                <div class="msgIntro">
+                    Lets keep in touch !
+                </div>
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Intro row END -->
+
+
+
+
+        <!-- Info row START -->
+       
+
+        <div class="row text-center">
+
+            <div class="text-center pt-4">
+                Contact 
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+
+            <div class="col-12 col-md-4 pt-4">
+
+                <form id="contactForm" action="" method="">
+                    <div class="row ">
+                                
+                        <div class="col-12 col-md-6 ">
+                            <input type="text" class="formAbout" placeholder="Name"  required>
+                        </div>
+
+                        <div class="col-12 col-md-6">
+                            <input type="email" class="formAbout" placeholder="Email"  required>
+                        </div>
+
+                        <div class="col-12  ">
+                            <textarea type="text" class="formAboutMsg" placeholder="Your message"  required></textarea>
+                        </div>  
+
+                        <div class="col-12 ">
+                            <input type="submit" class="buttonIntro"  value=" Send it > ">
+                        </div>
+
+                    </div>
+                </form>
+
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Info row END -->
+
+
+        <!-- Dl row START -->
+        <div class="row">
+
+            <div class="col-4 ">
+            </div>
+
+            <div class="col-12 col-md-4 pt-3">
+                <div class="row">
+
+                    <div class="col-12 col-md-8 ">
+                        <p><i class="fa-solid fa-envelope" style="color: chocolate;"></i> Email : thibaut.fgi&#64;hotmail.com</p>
+                        <p><i class="fa-solid fa-phone" style="color: chocolate;"></i> Phone : +33679034002.</p>
+                        <p><i class="fa-solid fa-house" style="color: chocolate;"></i> Address : Champs sur Marne, 77420, France.</p>
+                        <p><i class="fa-brands fa-linkedin" style="color: chocolate;"></i> Linkedin : Thibaut Figueira</p>
+                    </div>
+
+
+                    <div class="col-12 col-md-4 text-center align-items-center justify-content-center pt-3">
+                        <div>
+                            
+                            <button class="buttonCv" (click)="downloadPdf()">
+                                <i class="fa-solid fa-file-pdf" style="color: antiquewhite;"></i>
+                            </button>
+                        </div>
+                       curriculum vitæ
+                    </div>
+                    
+                </div>
+            </div>
+
+            <div class="col-4 ">
+            </div>
+
+        </div> <!-- Dl row END -->
+
+
+
+
+
+    </div> <!-- CONTAINER END HERE -->
+
+
+
