--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -29,7 +29,7 @@
 
         <div class="row text-center">
 
-            <div class="text-center pt-4">
+            <div class="text-center pt-4 myTxtWork">
                 Contact 
             </div>
 
