--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
             <li class="listHeader"><a routerLink="/works" routerLinkActive="active" ariaCurrentWhenActive="page">Works</a></li>
             <li class="listHeader"><a routerLink="/posts" routerLinkActive="active" ariaCurrentWhenActive="page">Posts</a></li>
             <li class="listHeader"><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
-                <li class="listHeader"><a href="">
+                <li class="listHeader"><a href="https://github.com/thibautfgi">
                     <i class="fa-brands fa-square-github"></i>
                     GitHub
                 </a></li>
