--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -213,7 +213,7 @@
                     </div>
                 
                     <div class="col-6 pt-2 text-end webLink">
-                        <a routerLink="/works" routerLinkActive="active" ariaCurrentWhenActive="page">
+                        <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
                             <i class="fa-solid fa-envelope" style="color: chocolate;"></i>
                             &nbsp;Email
                         </a>
