--- a/portfolio/src/app/components/notfound/notfound.component.css
+++ b/portfolio/src/app/components/notfound/notfound.component.css
@@ -2,3 +2,20 @@
     font-weight:bolder;
     font-size: 50px;
 }
+
+.buttonContact {
+    color: wheat;
+    border: none;
+    background-color: chocolate;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+  }
+  
+  .buttonContact:hover {
+    transform: scale(1.05); /* Use transform for scaling */
+    transition: transform 0.5s;
+  }
