--- a/portfolio/src/app/components/notfound/notfound.component.html
+++ b/portfolio/src/app/components/notfound/notfound.component.html
@@ -1,25 +1,7 @@
 <div class="container-fluid">
 
-<div class="row"> <!-- ROW1 START -->
 
-
-    <div class="col-4"></div>
-
-
-
-    <div class="col-4">
-        <app-scene></app-scene>
-    </div>
-
-
-
-    <div class="col-4"></div>
-
-
-</div> <!-- ROW1 END -->
-
-
-<div class="row"> <!-- ROW2 START -->
+<div class="row pt-4"> <!-- ROW2 START -->
 
 
     <div class="col-4"></div>
@@ -40,6 +22,27 @@
 
 </div> <!-- ROW2 END -->
 
+
+<div class="row pt-4"> <!-- ROW3 START -->
+
+
+    <div class="col-4"></div>
+
+
+
+    <div class="col-4">
+        <button class="buttonContact"
+        routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+        Back Home >
+      </button>
+    </div>
+
+
+
+    <div class="col-4"></div>
+
+
+</div> <!-- ROW3 END -->
 
 
 
