--- a/portfolio/src/app/components/works/works.component.html
+++ b/portfolio/src/app/components/works/works.component.html
@@ -1,1 +1,197 @@
-<p>works works!</p>
+<!-- Intro row START -->
+<div class="row text-center">
+    <div class="col-4 "></div>
+
+    <div class="col-12 col-md-4 pt-3">
+        <div class="msgIntro">
+            <span class="introTxtCadre">Let's see some of my work!</span>
+        </div>
+    </div>
+
+    <div class="col-4 "></div>
+</div> <!-- Intro row END -->
+
+<!-- Card1 row START -->
+<div class="row">
+    <div class="col-4"></div>
+
+    <div class="col-12 col-md-4 pt-4 text-center">
+        <span class="myTxtWork2">My project</span>
+
+        <div class="row">
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/justachips/chip8-golang" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/chip8.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        Chip-8
+                                        <i class="fa-brands fa-golang" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        My version of the CHIP-8 emulator in Golang, made with Ebiten.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/justachips/BotDiscord" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/didi.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        Bot Discord
+                                        <i class="fa-brands fa-discord" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        A discord bot with unique feature! History, music and more made in python.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-4"></div>
+</div> <!-- Card1 row END -->
+
+<!-- Card2.1 row START -->
+<div class="row">
+    <div class="col-4"></div>
+
+    <div class="col-12 col-md-4 text-center">
+        <div class="row">
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/justachips/e-commerce-sql" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/DMC-tfgi.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        E-commerce-Db
+                                        <i class="fa-solid fa-database" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        Welcome to my SQL script of a given database in PHP, with its DMC.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/justachips/Projet-Csharp-GIS" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/DmcFinal.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        Api Csharp
+                                        <i class="fa-solid fa-code" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        A C# API, with a web server and a server for the MySQL database built on Docker.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-4"></div>
+</div> <!-- Card2.1 row END -->
+
+<!-- Card3.1 row START -->
+<div class="row">
+    <div class="col-4"></div>
+
+    <div class="col-12 col-md-4 text-center">
+        <div class="row">
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/DuunKy/e-commerce-php" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/doc.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        E-commerce-Php
+                                        <i class="fa-brands fa-php" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        An e-commerce site made with PHP.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 pt-4">
+                <div class="row">
+                    <div class="col-1"></div>
+
+                    <div class="col-10 col-md-12">
+                        <a href="https://github.com/justachips/PortfolioFgi" class="card-link">
+                            <div class="card">
+                                <img src="/assets/img/mymy.png" alt="" class="cardImg">
+                                <div class="cardContent text-center">
+                                    <div class="cardTxtTitle">
+                                        My Portfolio
+                                        <i class="fa-brands fa-html5" style="color: whitesmoke;"></i>
+                                    </div>
+                                    <div class="cardTxt">
+                                        Here is my portfolio made in HTML, CSS, and JS. You are already exploring it!
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-4"></div>
+</div> <!-- Card3.1 row END -->
